--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -9,3 +9,10 @@ tasks:
 image:
   file: .gitpod.Dockerfile
 
+github:
+  prebuilds:
+    master: true
+    addBadge: true
+    pullRequests: true
+    pullRequestsFromForks: false
+    branches: true
